# colab-autopilot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: autopilot_setup.ipynb  colab_autopilot_server.py
src/colab_autopilot/: __init__.py  cli.py  client.py  config.py  crypto.py  mcp_server.py
